## v0.5.0:

* Verify domain exists for all cmds except build & download
* Removing requirement to check simpledb on download.
* Adding requirement for base on download.
* Fix error when .heirloom.yml does not exist.
* Refactor cli option validation
* Refactor cli specs
* Add -x to download to extract heirloom to given output path
* Verify -o specified in download is a directory
* Requiring -d for builds (will no longer default to .)
* Remove new lines from values of git comments
* Verify directory given at build is a directory
* Support archiving directories outside the cwd.
* Fixed bug in git repo verification on build.
* Added support for encryption.
* Removed short name and changed long name for AWS CLI creds.
* Adding encrypted attribute by default for all builds.
* Change base_prefix CLI option to base
* Changed subcommands build -> upload, update -> tag
* Changed tag option updated_value -> value

## v0.4.0:

* Prefixing domain name with heirloom_
* Adding CLI support for specific AWS creds
* Added specs
* Added support to delete domain when no records exist

## v0.3.1:

* Switched from Minitar to shell
* Removed Minitar gem
* Fixed git commit flag
* Updated specs
* Updated gems

## v0.3.0:

* Move account authorization out of config to cli
* Move region select out of config to cli
* Updated obtions for update to use -u (not -v) for update
* Cleaned up archive specs
* Added authorize cli class
* Changed output of show / list to JSON
* Updated readme & cli help

## v0.2.0:

* Command line options updates for each sub command.
* Command line option moved into seperate class.
* Artifact renamed to archive across the gem.
* Added bucket verification

## v0.1.4:

* Limit list of artifact ids returned in list
* Sort ids by date added
* Show latest id as default
* Setting deafult download path to local dir