@@ -19,6 +19,8 @@
 * Change base_prefix CLI option to base
 * Changed subcommands build -> upload, update -> tag
 * Changed tag option updated_value -> value
+* On upload, Heirloom will attempt to create buckets which do not exist.
+* Will not destroy the sdb domain when cleanin up old versions on upload.
 
 ## v0.4.0:
 
